# dosatsu-cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .slow-clang-tidy-checks  AstDump.md  BETTER_EXAMPLES.md  BUGS.md  CLAUDE.md  CMakeLists.txt  DB_SCHEMA.md  EXAMPLE_BUGS.md  FEATURE_PARITY.md  KUZU_SCHEMA.md  KuzuDatabaseDesign.md  KuzuDatabaseImprovementSugestions.md  KuzuDatabaseProjectStatus.md  LLVM_DEPENDENCY_METHOD_CHANGE.md  MESON_MIGRATION_PLAN.md  NewBuildPipeline.md  OPTIMIZATION_RESULTS_SUMMARY.md  PERFORMANCE_DONE.md  PERFORMANCE_INFRASTRUCTURE.md  PERFORMANCE_OVERVIEW.md  PERFORMANCE_TODO.md  PRIORITY_1_DATABASE_ANALYSIS.md  README.md  SCHEMA.md  build.py  conan.conf  conanfile.py  cursor-powershell-profile.ps1  debug_database.py  dev-env.bat  meson.build  meson_options.txt  please  please.bat  please.py  profile_examples.bat  (+3 more)
.claude/: settings.local.json
.cursor/: wcli0.config.json
.cursor/rules/: clean-start.mdc  iterative.mdc  terminal-commands-completion.mdc  terminal-operations-howto.mdc  verify.mdc
.github/workflows/: ci.yml  main.yml  manual.yml  meson-ci.yml
Examples/: README.md  run_examples.py
Examples/analysis/: README.md  framework.py  run_analysis.py
Examples/analysis/analyzers/: __init__.py  ast_analysis.py  control_flow_analysis.py  declaration_analysis.py  expression_analysis.py  inheritance_analysis.py  namespace_analysis.py  preprocessor_analysis.py  statement_analysis.py  template_analysis.py  type_analysis.py
Examples/cmake_projects/basic_examples/: CMakeLists.txt
Examples/cmake_projects/basic_examples/src/: control_flow.cpp  expressions.cpp  namespaces.cpp  simple2.cpp  simple_no_includes.cpp  templates.cpp
Examples/cmake_projects/comprehensive_examples/: CMakeLists.txt
Examples/cmake_projects/comprehensive_examples/src/: modern_cpp_features.cpp  schema_coverage_complete.cpp
Examples/cmake_projects/nostd_examples/: CMakeLists.txt
Examples/cmake_projects/nostd_examples/src/: no_std_example.cpp
Examples/cpp/: README.md
Examples/cpp/advanced_features/: CMakeLists.txt  advanced_features.cpp
Examples/cpp/basic/: CMakeLists.txt  inheritance.cpp  preprocessor.cpp
Examples/cpp/clean_code/: CMakeLists.txt
Examples/cpp/compilation/: advanced_no_std_compile_commands.json  comprehensive_advanced_compile_commands.json  comprehensive_compile_commands.json  comprehensive_no_std_compile_commands.json  multi_file_compile_commands.json  schema_coverage_compile_commands.json  simple_compile_commands.json  single_file_compile_commands.json  two_file_compile_commands.json  two_file_no_std_compile_commands.json
Examples/cpp/complete/: CMakeLists.txt  complete.cpp
Examples/cpp/comprehensive/: CMakeLists.txt  advanced_features.cpp  clean_example.cpp  complete_example.cpp  control_flow_complex.cpp  preprocessor_advanced.cpp  schema_coverage_complete.cpp  standard_example.cpp
Examples/cpp/control_flow_complex/: CMakeLists.txt  control_flow_complex.cpp
Examples/cpp/expressions/: CMakeLists.txt  expressions.cpp
Examples/cpp/inheritance/: CMakeLists.txt  inheritance.cpp
Examples/cpp/modern_cpp_features/: CMakeLists.txt  modern_cpp_features.cpp
Examples/cpp/namespaces/: CMakeLists.txt  namespaces.cpp
Examples/cpp/nostd/: CMakeLists.txt  (+2 more)
Examples/queries/: README.md  __init__.py  assertion_helpers.py  database_operations.py  query_operations.py  run_queries.py  verification_result.py
KuzuOutputTest/: clean_comprehensive_test.cpp  comprehensive_compile_commands.json  comprehensive_no_std_compile_commands.json  comprehensive_test.cpp  comprehensive_test_no_std.cpp  multi_file_compile_commands.json  simple_compile_commands.json  simple_test.cpp  single_file_compile_commands.json  test_control_flow.cpp  test_expressions.cpp  test_inheritance.cpp  test_inheritance_no_std.cpp  test_namespaces.cpp  test_preprocessor.cpp  test_templates.cpp  two_file_compile_commands.json  two_file_no_std_compile_commands.json
MakeIndex/: ASTDumpAction.cpp  ASTDumpAction.h  ASTNodeProcessor.cpp  ASTNodeProcessor.h  AdvancedAnalyzer.cpp  AdvancedAnalyzer.h  CMakeLists.txt  CommentProcessor.cpp  CommentProcessor.h  CompilationDatabaseLoader.cpp  CompilationDatabaseLoader.h  DeclarationAnalyzer.cpp  DeclarationAnalyzer.h  GlobalDatabaseManager.cpp  GlobalDatabaseManager.h  KuzuDatabase.cpp  KuzuDatabase.h  KuzuDump.cpp  KuzuDump.h  MakeIndex.cpp  NoWarningScope_Enter.h  NoWarningScope_Leave.h  ScopeManager.cpp  ScopeManager.h  StatementAnalyzer.cpp  StatementAnalyzer.h  TemplateAnalyzer.cpp  TemplateAnalyzer.h  TypeAnalyzer.cpp  TypeAnalyzer.h  meson.build
conan/profiles/: default  release
docs/: CLEAN_SLATE.md  DEVELOPER_GUIDE.md  MESON_BUILD.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  QUERY_GENERATION_GUIDELINES.md  TROUBLESHOOTING.md
performance_tests/: CMakeLists.txt  README.md  run_performance_tests.py  std_library_performance_test.cpp
scripts/: analyze_profile.py  clean.py  debug_database.py  dev-build.py  format_config.py  profile.py  setup-dev.py  setup_deps.cmake  validate-ci-quick.py  validate-ci.py  validate-parity.py
source/: ASTDumpAction.cpp  ASTDumpAction.h  ASTNodeProcessor.cpp  ASTNodeProcessor.h  AdvancedAnalyzer.cpp  AdvancedAnalyzer.h  CMakeLists.txt  CommentProcessor.cpp  CommentProcessor.h  CompilationDatabaseLoader.cpp  CompilationDatabaseLoader.h  DeclarationAnalyzer.cpp  DeclarationAnalyzer.h  Dosatsu.cpp  GlobalDatabaseManager.cpp  GlobalDatabaseManager.h  KuzuDatabase.cpp  KuzuDatabase.h  KuzuDump.cpp  KuzuDump.h  NoWarningScope_Enter.h  ScopeManager.cpp  ScopeManager.h  StatementAnalyzer.cpp  StatementAnalyzer.h  TemplateAnalyzer.cpp  TemplateAnalyzer.h  TypeAnalyzer.cpp  TypeAnalyzer.h
subprojects/: llvm.wrap
subprojects/packagefiles/llvm-project/: meson.build
tests/: README.md  run_tests.py  test_ast_nodes.py  test_control_flow.py  test_declarations.py  test_expressions.py  test_framework.py  test_inheritance.py  test_namespaces.py  test_preprocessor.py  test_statements.py  test_templates.py  test_types.py
tools/: build.py  format.py  lint.py  setup-deps.py
xmake_modules/: execv.lua
(+15 files in other folders)
